# kernel-examples

./: README.md  README.zh_cn.md
af/src/example01/: README.md  README.zh_cn.md  example01.cpp
af/src/example02/: CMakeLists.txt  README.md  README.zh_cn.md  example02.cpp
af/src/example03/: README.md  README.zh_cn.md  example03.cpp
gcs/to-be-removed/: CMakeLists.txt
gcs/to-be-removed/GCS2D.DotNet/: CMakeLists.txt  GCS2D.DotNet.cpp  GCS2D.DotNet.h
gcs/to-be-removed/test_amcax_gcs/: CMakeLists.txt  main.cpp
gcs/to-be-removed/test_amcax_gcs/test_case/: test_case1.json  test_case2.json
gcs/to-be-removed/test_assembly/: CMakeLists.txt  test_assembly.cpp
gcs/to-be-removed/test_gcs/: CMakeLists.txt  TestSolver.h  test_gcs.cpp
gcs/to-be-removed/test_raw/: CMakeLists.txt  main.cpp  unit_test.h
geome/src/example01/: README.md  README.zh_cn.md  example01.cpp
geome/src/example01/data/: FEA_13.step
geome/src/example02/: CMakeLists.txt  README.md  README.zh_cn.md  example01.cpp  example02.cpp
geome/src/example02/data/: skin.brep  skin.step
geome/src/example03/: README.md  README.zh_cn.md  example03.cpp  example03.h
geome/src/example03/data/: faces.brep  weidai1.brep
geome/src/example04/: CMakeLists.txt  README.md  README.zh_cn.md  example04.cpp
meshing/src/example01/: README.md  README.zh_cn.md  example01.cpp  example1.cpp  example1.h
meshing/src/example02/: README.md  README.zh_cn.md  example02.cpp  example2.cpp  example2.h
meshing/src/example03/: README.md  README.zh_cn.md  example03.cpp  example3.cpp  example3.h
meshing/src/example04/: CMakeLists.txt  README.md  README.zh_cn.md  example04.cpp  example4.cpp
meshing/src/example05/: README.md  README.zh_cn.md  example05.cpp  example5.cpp
meshing/src/example06/: README.md  README.zh_cn.md  example06.cpp  example06.h  example6.cpp  example6.h
meshing/src/example07/: README.md  README.zh_cn.md  example07.cpp
meshing/src/example08/: README.md  README.zh_cn.md  example08.cpp
nextmesh/src/example01/: README.md  README.zh_cn.md  example01.cpp
nextmesh/src/example01/data/: 1.json  1.stp  2.brep  2.json  2.step  3.brep  3.json  3.step  4.brep  4.json  4.step  5.json  5.step  6.brep  6.json  6.step  7.brep  7.json  8.brep  8.json  escapement.stl  qiuwotaojian.brep  stl.json
nextmesh/src/example02/: CMakeLists.txt  README.md  README.zh_cn.md  conanfile.txt  example01.cpp  example02.cpp
nextmesh/src/example02/data/: 1.json  1_1.json  1_2.json  1_3_COLLAPSE.json  1_3_EXCLUDE.json  1_3_SQUEEZE.json  2_1.json  2_2_false.json  2_2_true.json  2_3_false.json  2_3_true.json  2_4_15.json  2_4_45.json  2_5_270.json  2_5_false.json  2_6_false.json  2_6_true.json  3.json  doubleInnerBoundary.brep  doubleInnerBoundary.step
nextmesh/src/example03/: README.md  README.zh_cn.md  example03.cpp
nextmesh/src/example03/data/: param1.json  param10.json  param2.json  param3.json  param4.json  param5.json  param6.json  param7.json  param8.json  param9.json  yepan.brep
nextmesh/src/example04/: README.md  README.zh_cn.md  example04.cpp
nextmesh/src/example04/data/: test.json
nextmesh/src/example05/: CMakeLists.txt  README.md  README.zh_cn.md  example05.cpp
nextmesh/src/example05/data/: 1.json  1_Aspect.json  1_Variable.json  2.json  2_1.json  (+1 more)
nextmesh/src/example06/: CMakeLists.txt  README.md  README.zh_cn.md  example06.cpp
nextmesh/src/example06/data/: 7.brep
nextmesh/src/example07/: CMakeLists.txt  README.md  README.zh_cn.md  example07.cpp
nextmesh/src/example08/: README.md  README.zh_cn.md  example08.cpp
nextmesh/src/example09/: README.md  README.zh_cn.md  example09.cpp
nextmesh/src/example10/: README.md  README.zh_cn.md  example10.cpp
nurbs/src/example01/: CMakeLists.txt  README.md  README.zh_cn.md  example01.cpp
nurbs/src/example02/: CMakeLists.txt  README.md  README.zh_cn.md  example02.cpp
nurbs/src/example03/: README.md  README.zh_cn.md  example03.cpp
part/src/example01/: CMakeLists.txt  README.md  README.zh_cn.md  example1.cpp
part/src/example02/: README.md  README.zh_cn.md  example02.cpp  example2.cpp
part/src/example03/: README.md  README.zh_cn.md  example3.cpp  example3.h
part/src/example04/: README.md  README.zh_cn.md  example4.cpp
part/src/example05/: README.md  README.zh_cn.md  example5.cpp
part/src/example06/: README.md  README.zh_cn.md  example6.cpp
part/src/example07/: CMakeLists.txt  README.md  README.zh_cn.md  example7.cpp  example7.h
part/src/example08/: README.md  README.zh_cn.md  example8.cpp
part/src/example09/: README.md  README.zh_cn.md  example9.cpp
part/src/example10/: README.md  README.zh_cn.md  example10.cpp
part/src/example11/: README.md  README.zh_cn.md  example11.cpp  example11.h
part/src/example12/: README.md  README.zh_cn.md  example12.cpp
performance/src/example01/: example01.cpp
performance/src/example02/: CMakeLists.txt  example02.cpp
step/src/example01/: CMakeLists.txt  README.md  README.zh_cn.md  example01.cpp
step/src/example02/: CMakeLists.txt  README.md  README.zh_cn.md  example02.cpp  example02.h
subd/src/example01/: CMakeLists.txt  README.md  README.zh_cn.md  example1.cpp
subd/src/example02/: README.md  README.zh_cn.md  example2.cpp
subd/src/example03/: README.md  README.zh_cn.md  example3.cpp
subd/src/example04/: CMakeLists.txt  README.md  README.zh_cn.md  example4.cpp
subd/src/example05/: CMakeLists.txt  README.md  README.zh_cn.md  example5.cpp
subd/src/example06/: README.md  README.zh_cn.md  example6.cpp
subd/src/example07/: README.md  README.zh_cn.md  example7.cpp
tmspline/src/example01/: README.md  README.zh_cn.md  example1.cpp
tmspline/src/example02/: CMakeLists.txt  README.md  README.zh_cn.md  example2.cpp
tmspline/src/example03/: CMakeLists.txt  README.md  README.zh_cn.md  example3.cpp
tmspline/src/example04/: CMakeLists.txt  README.md  README.zh_cn.md  example4.cpp
tmspline/src/example05/: RAEDME.zh_cn.md  README.md  README.zh_cn.md  example5.cpp
tmspline/src/example06/: README.md  README.zh_cn.md  example6.cpp  example6.h
tmspline/src/example07/: README.md  README.zh_cn.md  example7.cpp
(+5 files in other folders)
